tdf#95581: Assume tiny shears are rounding artefacts etc and can be ignored

See bug report for more discussion.

Change-Id: I50ee82abac4ddfbdca0fb03d17c0518860466a52